--- a/style.css
+++ b/style.css
@@ -6,13 +6,78 @@ h1{
 }
 body{
     font-family: 'Open Sans', sans-serif;
+    margin: 0%;
+}
+#image2{
+    size: 100%;
+   float: right;
+   padding-right: 5%;
+   padding-top: 5%;
 }
 .half-width{
     width: 40%;
     float: left;
     margin-left: 5%;
     padding-left: 5%;
+    padding-top: 5%;
 }
+.half-width2{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    font-size: 20px;
+    padding-top: 5%;
+}
+.half-width3{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-top: 5%;
+}
+
 .half-width img{
     width: 100%;
+}
+.top-banner{
+    background-image: url(images/back3.jpg) ;  
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+section{
+    height: 500px;
+}
+.button{
+    text-decoration: none;
+    background-color: deeppink;
+    padding:10px 20px ;
+    border-radius: 5px;
+    color: floralwhite;
+    font-weight: 700;
+    background-image: linear-gradient(45deg, tomato, deeppink);
+}
+.middle-banner{
+    background-image: url(images/back4.jpg) ;  
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+.bottom-banner{
+    background-image: url(images/back5.jpg) ;  
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    height: 300px;
+    width: 500px;
+    border-radius: 5px;
+}
+#full-stack{
+    border-left: 7px red solid;
+}
+#learner{
+    border-left: 7px greenyellow solid;
+}
+#foot{
+    text-align: center;
+    size: 10px;
 }
